no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -19,7 +19,7 @@ NOTATION ==>                     -#Pull requests
                                  A#acorn
                                  E#Espree
                                  T#Typescript-estree
-                                 S#Esprima
+                                 S#esprima
                                   #Lowercase means "not present"
 
 
@@ -40,7 +40,7 @@ any                               #NODE:
                                   #        - line NUM (1-indexed)
                                   #        - column NUM (0-indexed)
                                 t##  - start|end NUM (not line-wise)
-                                b##  - range [NUM, NUM2] (not line-wise)
+                                 ##  - range [NUM, NUM2] (not line-wise)
                                   #It is root type, abstract:
                                   #  - all other types inherit from it
                                   #  - all redefine type STR, except if abstract types themselves
@@ -90,35 +90,40 @@ EXPR_STATEMENT                    #Statement with single EXPR.
                                   #  - expression EXPR
 (EXPR)                          A##Child of EXPRESSION_STATEMENT, type 'ParenthesizedExpression'
                                 B##On EXPR:
-                                B##  - parenthesized BOOL
-                                B##  - parenStart NUM
+                                B##  - extra.parenthesized BOOL
+                                B##  - extra.parenStart NUM
 
-#!/bin/bash                     B##Type 'InterpreterDirective'
-                                B##  - value STR
-                                B##On PROGRAM:
+#!/bin/bash                     B##On PROGRAM:
                                 B##  - interpreter INTERPRETER_DIRECTIVE
+                                B##Type 'InterpreterDirective'
+                                B##  - value STR
 'use strict'                      #Child of EXPR_STATEMENT:
                                   #  - directive STR
                                   #  - expression LITERAL
-                                B##Type 'Directive':
-                                B##  - value STR
-                                B##  - extra.raw[Value] STR
                                 B##On PROGRAM|BLOCK_STATEMENT:
                                 B##  - directives DIRECTIVE_ARR
+                                B##Type 'Directive':
+                                B##  - value DIRECTIVE_LITERAL (type 'DirectiveLiteral'):
+                                B##     - value STR
+                                B##     - extra.raw[Value] STR
 
 ;                                 #Child of STATEMENT, type 'EmptyStatement'
                                   #Empty statement, with only semicolon
 {...}                             #Child of STATEMENT, type 'BlockStatement':
                                   #  - body STATEMENT_ARR
 
-// COMMENT                      B##On NODE:
-/* COMMENT */                   B##  - [leadingComment|trailingComments COMMENT_ARR]
-                                a##On PROGRAM:
-                                a##  - comments COMMENT_ARR
-                                a##COMMENT:
-                                a##  - type 'Line|Block'
+// COMMENT                     ab##On PROGRAM:
+/* COMMENT */                  ab##  - comments COMMENT_ARR
+                               ab##COMMENT:
+                               ab##  - type 'Line|Block'
+                               ab##  - value STR
+                                B##On FILE:
+                                B##  - comments COMMENT_ARR
+                                B##On NODE:
+                                B##  - [leadingComment|trailingComments|innerComments COMMENT_ARR]
+                                B##COMMENT:
                                 B##  - type 'CommentLine|Block'
-                                a##  - value STR
+                                B##  - value STR
 
 
                                              /=+===============================+=\
