no commit message

--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -211,6 +211,6 @@ ACORN-IMPORT-META                ##PLUGIN for import.meta
 ACORN-NUMERIC-SEPARATOR          ##PLUGIN for NUM_NUM_NUM
                                  ##Version 0.3.0
 
-ACORN-JSX                        ##PLUGIN for JSX (see JSX doc for AST format)
+ACORN-JSX()                      ##PLUGIN for JSX (see JSX AST doc)
                                  ##New token types: jsxName, jsxText, jsxTagStart, jsxTagEnd
                                  ##Version 5.0.1
