no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -512,6 +512,7 @@ TRANSTYPING RULES ==>             #For TYPE2 <-- TYPE, TYPE2 must be contravaria
 
 TYPE INFERENCE ==>                #Only needed for untyped values:
                                   #  - i.e. not needed for JavaScript operators (including =) since their types is known
+                                  #Done usually bottom-up, but sometimes top-down ("contextual typing")
                                   #Untyped 'MODULE' dependency:
                                   #  - i.e. without TypeScript TYPEs, and --allowJs --maxNodeModuleJsDepth was not used
                                   #Untyped FUNC parameters:
