no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -589,7 +589,7 @@ export declare ...                #ESM `export` must be before `declare`
 
 AMBIENT FILE ==>                  #File where every statement is declaration|TYPE.
                                   #Often named *.d.ts. Should be sibling to each build file for easy resolution|discovery.
-                                  #Should be treated as a production dependency, not dev dependency.
+                                  #Should be treated as a production dependency (or peer dependency), not dev dependency.
 -d|--declaration                  #Generate *.d.ts ambient files:
                                   #  - type inference on import|export statements
                                   #  - only use top-level files (which is guessed from dependency tree)
@@ -719,6 +719,8 @@ declare global { ... }            #Module augmentation for global scope.
                                   #  - search at https://microsoft.github.io/TypeSearch/
                                   #Prefer keeping TYPEs in same repository as code instead.
 @types/node                       #Same for all core Node.js "MODULE"
+                                  #Do not use ESM `export` i.e. should use <reference types="node"/>
+                                  #Should always be devDependency not production dependency, since it is actually an optional peerDependency (which is not supported by npm)
 /// <reference types="MODULE"/>   #Same as <reference path> but for "@types/MODULE"
 --types "MODULE" ...              #'MODULE'_ARR of @types/MODULE to automatically try during "MODULE" resolution (regardless of --moduleResolution)
                                   #Def: any
