no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #12.6.0 (current), 10.16.0 (active LTS), 8.16.0 (active LTS)
+VERSION ==>                                     #12.7.0 (current), 10.16.0 (active LTS), 8.16.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -504,6 +504,7 @@ POLICY                                       11*#JSON file
                                              11*#  - does not own file (i.e. cannot do chmod)
 POLICY.resources.PATH|URL                    11*#POLICYFILE
 POLICYFILE.integrity                         11*#STR: 'sha256|384|512' followed by 'HASH'
+--policy-integrity=STR                       12*#Same as CLI, i.e. works even if POLICY file was tampered with.
 POLICY.onerror                               11*#What do on integrity failures:
                                              11*#  - 'throw' (def): throw ERROR
                                              11*#  - 'exit': print ERROR + process.exit(1)
@@ -638,8 +639,9 @@ ISTREAM.on("close", FUNC())                     #When underlying fd is closed (n
 ISTREAM.on("error", FUNC(ERROR))                #
 ISTREAM.pause|resume()                          #Makes it stop|resume emit "data" events.
 ISTREAM.isPaused()                              #
-ISTREAM.setEncoding('ENCODING')                 #
 ISTREAM.readable                                #BOOL
+ISTREAM.readableEncoding                     12*#'ENCODING'
+ISTREAM.setEncoding('ENCODING')                 #
 ISTREAM.readableObjectMode                   12*#BOOL
 ISTREAM.readableHighWaterMark                   #NUM
 ISTREAM.readableLength                        9*#NUM. Number of bytes not read yet
@@ -844,9 +846,11 @@ INTERFACE.pause|resume()                        #Like ISTREAM.pause|resume()
 INTERFACE.on("pause|resume", FUNC())            #
 INTERFACE.on("SIGINT|SIGTSTP|SIGCONT", FUNC())  #
 
-clearLine(OSTREAM, NUM[, FUNC()])               #Can be 0 (entire line, \e2K) or -1|1 (to the left|right of cursor, \e0K, \e1K)
-cursorTo|moveCursor(OSTREAM, NUM, NUM2[,FUNC()])#Move cursor absolutely|relatively (\eNUMA, \eNUMB, \eNUM2C, \eNUM2D)
-clearScreenDown(OSTREAM[, FUNC()])              #Clear all following lines (\e0J). To clear screen, combine with cursorTo(OSTREAM, 0, 0)
+clearLine(OSTREAM, NUM[, FUNC()])->BOOL         #Can be 0 (entire line, \e2K) or -1|1 (to the left|right of cursor, \e0K, \e1K)
+                                                #FUNC|BOOL are from the underlying OSTREAM.write()
+cursorTo|moveCursor(OSTREAM, NUM, NUM2[,FUNC()])
+ ->BOOL                                         #Move cursor absolutely|relatively (\eNUMA, \eNUMB, \eNUM2C, \eNUM2D)
+clearScreenDown(OSTREAM[, FUNC()])->BOOL        #Clear all following lines (\e0J). To clear screen, combine with cursorTo(OSTREAM, 0, 0)
 
 emitKeypressEvents(OSTREAM[, INTERFACE])        #Enable OSTREAM.on('keypress')
                                                 #If OSTREAM is connected to an INTERFACE, can specify it to disable completion on copy-pasted input
@@ -1385,6 +1389,7 @@ RES                                             #OSTREAM, writing the body:
 RES.on("close", FUNC())                         #Fired if closed before end() was called
 RES.headersSent                                 #True if headers are sent
 RES.finished                                    #True if all sent (i.e. after end())
+RES.writableFinished                         12*#True if all sent + flushed
 RES.statusCode|Message                          #If statusMessage not set, use STATUS_CODES[statusCode]
 RES.setHeader('VAR', 'VAL'[_ARR])               #'VAL'_ARR: same as doing setHeader() several times.
 RES.getHeader('VAR')->'VAL'[_ARR]               #
