no commit message

--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -84,9 +84,6 @@ ACORN.parse('JS'[, OPTS])         #Parse JavaScript.
                                   #  - onInsertedSemicolon(NUM, POSITION): called when found a line with missing semicolon
                                   #  - onTrailingComma(NUM, POSITION): called on trailing commas
                                   #  - program PROGRAM2_NODE: prepend PROGRAM2.body to PROGRAM.body
-                                  #  - plugins.PLUGIN PLUGIN_OPTS:
-                                  #     - true for no option
-                                  #     - must be defined to use a PLUGIN
                                   #Positions:
                                   #  - line-wise (if OPTS.locations true, def false):
                                   #     - POSITION is OBJ.line|column
@@ -189,6 +186,31 @@ acorn [FILE]                      #CLI. Calls ACORN.parse() -> console.log()
 ACORN.Parser                      #PARSER. Same as ACORN, except with additional method extend()
 PARSER.extend(PLUGIN...)          #
 
+ACORN-STAGE3                     ##PLUGIN bundling the following PLUGINs: bigint, class-fields, private-class-*,
+                                 ##static-class-features, dynamic-import, import-meta
+                                 ##Version 2.0.0
+
+ACORN-BIGINT                     ##PLUGIN for BIGINT
+                                 ##Version 0.4.0
+
+ACORN-CLASS-FIELDS               ##PLUGIN for class { VAR [= VAL] }
+                                 ##Version 0.3.1
+ACORN-PRIVATE-CLASS-ELEMENTS     ##PLUGIN for class { #VAR }
+                                 ##New token type: privateName
+                                 ##Version 0.1.1
+ACORN-PRIVATE-CLASS-METHODS      ##PLUGIN for class { #FUNC() }
+                                 ##New token type: privateName
+                                 ##Version 0.3.0
+ACORN-STATIC-CLASS-FEATURES      ##PLUGIN for class { static VAR [= VAL] }
+                                 ##Version 0.2.0
+
+ACORN-DYNAMIC-IMPORT             ##PLUGIN for import()
+                                 ##Different syntax than ESTree: type 'Import'
+                                 ##Version 4.0.0
+
+ACORN-IMPORT-META                ##PLUGIN for import.meta
+                                 ##Version 1.0.0
+
 ACORN-ES7(ACORN)                 ##Patches ACORN so it can process decorators, according to ESTree
                                  ##PLUGIN name: 'es7'
                                  ##New token types: at
@@ -199,7 +221,3 @@ ACORN-JSX/inject(ACORN)          ##Patches ACORN so it can process JSX (see JSX 
                                  ##New token types: jsxName, jsxText, jsxTagStart, jsxTagEnd
                                  ##Does not support: JSXSpreadChild
                                  ##Version 5.0.1
-
-ACORN-EXPORT-NS-FROM             ##PLUGIN for "export * as VAR from '...'" (ExportNamedDeclaration)
-
-ACORN-DYNAMIC-IMPORT             ##PLUGIN for import()
