--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/estree.format.txt
@@ -5,6 +5,9 @@
 
 
 
+ALTERNATIVES ==>                  #  - ESTree (def): most supported
+                                  #  - Shift: less supported
+
 VERSION ==>                       #Last commit 26/01/2018
                                   #JavaScript AST standard
 
@@ -380,8 +383,8 @@ class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclar
 class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 
 new.target                        #Child of EXPR, type 'MetaProperty':
-                                  #  - meta IDENTIFIER (new)
-                                  #  - property IDENTIFIER (target)
+import.meta                       #  - meta IDENTIFIER
+                                  #  - property IDENTIFIER
 
 this                              #Child of EXPR, type 'ThisExpression'
 
