--- a/Languages/Metaprogramming/Parsing/Traversing/JavaScript/acorn-walk.node.txt
+++ b/Languages/Metaprogramming/Parsing/Traversing/JavaScript/acorn-walk.node.txt
@@ -13,12 +13,31 @@ NODE.type                         #Include abstract types: 'Expression', 'Statem
                                   #Add: 'ForInit' (first part of "for in|of")
                                   #Do not include: 'ExportSpecifier', 'ClassBody', 'SwitchCase'
 
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:          TRAVERSING           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
 WALK.simple(NODE, OBJ)            #Walk through AST tree and call OBJ.TYPE(CHILD_NODE) for each CHILD_NODE whose type is TYPE.
                                   #Start with leaves, end with root.
+
 WALK.ancestors(NODE, OBJ)         #Same but instead call OBJ.TYPE(CHILD_NODE, ANCESTOR_NODE_ARR)
                                   #ANCESTOR_NODE_ARR starts with ancestor and ends with CHILD_NODE.
+
 WALK.full[Ancestors](NODE, FUNC)  #Same as two previous except using FUNC(CHILD_NODE, ...) for any CHILD_NODE
+
 WALK.recursive(NODE)              #Same except does not trigger any callbacks. Only useful when BASE_OBJ is overridden.
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            FINDING            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
 
 WALK.findNodeAt                   #Returns { node NODE2 } with first NODE2 where:
 (NODE[, START_OFFSET[, END_OFFSET #  - NODE2.start === START_OFFSET
@@ -35,6 +54,14 @@ WALK.findNodeAfter(NODE, OFFSET,
 WALK.findNodeBefore(NODE, OFFSET,
 ['TYPE'|FUNC('TYPE', NODE)->BOOL])
 ->OBJ                             #Same with OFFSET <= NODE.end
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:         CUSTOMIZATION         :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
 
 WALK.*(..., STATE_OBJ)            #Every function can pass a STATE_OBJ that is passed as last argument to callbacks
 
