no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -736,7 +736,7 @@ ReadStream                                      #ISTREAM of a text terminal. Oft
 READSTREAM.isRaw                                #If false (def):
                                                 #  - echoes input to output
                                                 #  - buffer input until next newline (i.e. line-wise input instead of character-wise)
-                                                #  - buffered input can be removed with Backspace|delete
+                                                #  - buffered input can be removed with Backspace|Delete)
                                                 #  - can quit with CTRL-D, CTRL-C, CTRL-Z
                                                 #  - emit sounds (bell)
                                                 #  - normalize any non-ASCII to ASCII (by removing MSB)
@@ -744,7 +744,7 @@ READSTREAM.isRaw                                #If false (def):
                                                 #In either case:
                                                 #  - use replace mode (not insert mode)
                                                 #  - no Emacs keybindings (CTRL-A, etc.)
-                                                #  - can move cursors (arrows, PageUp|Down, Home|End)
+                                                #  - can move cursor (Left|Right|Home|End)
 READSTREAM.setRawMode(BOOL)                     #
 READSTREAM.bytesRead                            #So far (including newlines)
 
@@ -791,16 +791,24 @@ WRITESTREAM.hasColors([NUM][, process.env])  10*#Returns true if 2 ** getColorDe
                                              \=+===============================+=/
 
 
-INTERFACE                                       #Read CLI input and pipe it to output
-                                                #I.e. when using stdin and stdout on a terminal, will create a CLI
-                                                #If Node prompt is already there, will double output on input
+INTERFACE                                       #Interactive TTY
+
 createInterface(OBJ)->INTERFACE                 #OBJ:
                                                 #  - input ISTREAM
                                                 #  - output OSTREAM
-                                                #  - terminal BOOL (def: OSTREAM.isTTY): use READSTREAM|WRITESTREAM
+                                                #  - terminal BOOL (def: OSTREAM.isTTY):
+                                                #     - do not use raw mode
+                                                #     - handle sequences:
+                                                #        - removing chars (Backspace|Delete|CTRL-H|D|U|K|W)
+                                                #        - exiting (CTRL-C|D|Z)
+                                                #        - moving cursor (Left|Right|Home|End|CTRL-A|E|B|F)
+                                                #        - clear screen (CTRL-L)
+                                                #     - use tab completion
+                                                #     - use history
+                                                #        - including history navigation (Up|Down|CTRL-N|P)
+                                                #     - use emitKeypressEvents()
                                                 #  - completer(STR[, FUNC(ERROR, ARR)])[->ARR]:
                                                 #     - used to tab completion
-                                                #     - can be sync or async
                                                 #     - ARR: [STR2_ARR, STR]
                                                 #        - STR is original string
                                                 #        - STR2_ARR are possible matches. If only one left, autocompletes
@@ -811,18 +819,22 @@ createInterface(OBJ)->INTERFACE                 #OBJ:
                                                 #  - crlfDelay NUM (def: 100, cannot be lower): if input reads \r and \n
                                                 #    successively but more than NUMms apart, treat them as two newlines, not one
                                              10*#  - escapeCodeTimeout NUM (def: 500) (in ms): how long to wait when starting an ESC sequence
-INTERFACE.close()                               #Called by ISTREAM.end(), CTRL-C and CTRL-D.
+INTERFACE.close()                               #Called by ISTREAM.end() and CTRL-C|D|Z
 INTERFACE.on("close", FUNC())                   #
 
 INTERFACE.on("line", FUNC(STR))                 #Fired each time a line is read from ISTREAM.
 INTERFACE[Symbol.asyncIterator]              10*#I.e. can do for (const STR of INTERFACE)
+
 INTERFACE.write(STR[, OBJ])                     #Prints STR on OSTREAM or, if OBJ { ctrl|meta|shift: true, name: STR },
                                                 #on CTRL|META|SHIFT-STR
                                                 #Be careful as it will be read by ISTREAM, if ISTREAM and OSTREAM point to same thing (e.g. terminal).
+
 INTERFACE.setPrompt(STR)                        #Change OBJ.prompt (see above)
 INTERFACE.prompt([BOOL])                        #Write in beginning of current OSTREAM line the OBJ.prompt
                                                 #If line was not empty, will place cursor at character number UINT of prompt (def) or, if true, at end of line.
+
 INTERFACE.question(STR, FUNC(STR2))             #Replace current prompt by STR on OSTREAM, and fires FUNC(STR2) on line event instead of normal line event.
+
 INTERFACE.pause|resume()                        #Pause|resume ISTREAM.
                                                 #ISTREAM still accept input but buffers it, and reads it once resumed.
                                                 #Also fired by SIGCONT or SIGTSTP (CTRL-Z)
@@ -830,10 +842,18 @@ INTERFACE.pause|resume()                        #Pause|resume ISTREAM.
 INTERFACE.on("pause|resume", FUNC())            #
 INTERFACE.on("SIGNINT|TSTP|CONT", FUNC())       #
 
-clearScreenDown(WRITESTREAM)                    #
-clearLine(WRITESTREAM, NUM)                     #Can be 0 (entire line) or -1|1 (to the left|right of cursor)
-cursorTo|moveCursor(WRITESTREAM, NUM, NUM2)     #Move cursor absolutely|relatively
-emitKeypressEvents(WRITESTREAM[, INTERFACE])    #Enable OSTREAM.on('keypress')
+clearScreenDown(OSTREAM)                        #
+clearLine(OSTREAM, NUM)                         #Can be 0 (entire line) or -1|1 (to the left|right of cursor)
+cursorTo|moveCursor(OSTREAM, NUM, NUM2)         #Move cursor absolutely|relatively
+
+emitKeypressEvents(OSTREAM[, INTERFACE])        #Enable OSTREAM.on('keypress')
+                                                #If OSTREAM is connected to an INTERFACE, can specify it to disable completion on copy-pasted input
+OSTREAM.on('keypress', FUNC(STR, OBJ))          #STR is what to print (e.g. 'a', undefined or '') (for a, LeftArrow and CTRL-C)
+                                                #OBJ:
+                                                #  - sequence STR (e.g. 'a', '\u001b[D' or '\u0003')
+                                                #  - name STR (e.g. 'a', 'left' or 'c')
+                                                #  - shift|ctrl|meta BOOL
+                                                #Can use ESC sequences
 
 
                                              /=+===============================+=\
